k8s/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pfe-gitops-demo
  namespace: default
  labels:
    app: pfe-gitops-demo
    env: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pfe-gitops-demo
      env: dev
  template:
    metadata:
      labels:
        app: pfe-gitops-demo
        env: dev
    spec:
      containers:
      - name: pfe-gitops-demo-app
        image: gitops2.azurecr.io/spring-boot-thymeleaf:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 150M
          limits:
            cpu: 200m
            memory: 300M
