k8s/spring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
  labels:
    app.kubernetes.io/instance: spring
  name: spring-ingress
  namespace: spring
spec:
  ingressClassName: nginx
  rules:
  - host: pfe-adactim-app.eastus.cloudapp.azure.com
    http:
      paths:
      - backend:
          service:
            name: spring
            port:
              number: 8080
        path: /spring
        pathType: Prefix
  - host: pfe-adactim-app.eastus.cloudapp.azure.com
    http:
      paths:
      - backend:
          service:
            name: spring
            port:
              number: 8080
        path: /login
        pathType: Prefix

  tls:
  - hosts:
    - pfe-adactim-app.eastus.cloudapp.azure.com
    secretName: tls-secret
